--- a/SubwebPages/menu.html
+++ b/SubwebPages/menu.html
@@ -1,7 +1,7 @@
 <html>
     <body bgcolor="green"></br>
         
-        <a href="home.html" target="main"><font color="white">HOME</font></a><BR><br>
+        <a href="main.html" target="main"><font color="white">HOME</font></a><BR><br>
         <a href="about.html" target="main"><font color="white">ABOUT</font></a><BR><br>
         <a href="sponsers.html" target="main"><font color="white">SPONSERS</font></a><BR><br>
         <a href="team.html" target="main"><font color="white">TEAM</font></a><BR>
