--- a/SubwebPages/footer.html
+++ b/SubwebPages/footer.html
@@ -1,12 +1,13 @@
 <html>
     <body>
         <div align="right">
-            <font size="15" color="blue">
+            <font color="blue">
                 <h2>Contact:</h2></br></h2>
-                Prabhav Singh</font></div></br>
+                Prabhav Singh</br>
                 Email:bt21btech11004@iith.ac.in</br>
                 Whatsapp/Call=9569613574,7310359856</br>
             </font>
+            
         </div>
     </body>
 </html>
